feat(ui): design and logic updates

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,9 @@
   width: 100px;
 }
 
+.selectable {
+  height: 100px;
+}
 .selectable:hover {
   cursor: pointer;
-  border: 1px solid #d0d0d0;
-}
-
-.selected {
-  border: 1px solid #d0d0d0;
 }
