feat(ui): remove tiktok embed in favor of linking image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -434,54 +434,14 @@
           Check out this video explanation by
           <a href="https://x.com/thetiddlywinks">&#64;thetiddlywinks</a>:
         </p>
-        <blockquote
-          class="tiktok-embed"
-          cite="https://www.tiktok.com/@tiddlytok/video/7379613078150860062"
-          data-video-id="7379613078150860062"
-          style="max-width: 605px; min-width: 325px"
-          muted="true"
-        >
-          <section>
-            <a
-              target="_blank"
-              title="@tiddlytok"
-              href="https://www.tiktok.com/@tiddlytok?refer=embed"
-              >&#64;tiddlytok</a
-            >
-            Dissection shape abacus for Verity encounter in Salvation’s Edge
-            Raid
-            <a
-              title="destiny2"
-              target="_blank"
-              href="https://www.tiktok.com/tag/destiny2?refer=embed"
-              >#destiny2</a
-            >
-            <a
-              title="salvationsedge"
-              target="_blank"
-              href="https://www.tiktok.com/tag/salvationsedge?refer=embed"
-              >#salvationsedge</a
-            >
-            <a
-              title="raid"
-              target="_blank"
-              href="https://www.tiktok.com/tag/raid?refer=embed"
-              >#raid</a
-            >
-            <a
-              title="puzzle"
-              target="_blank"
-              href="https://www.tiktok.com/tag/puzzle?refer=embed"
-              >#puzzle</a
-            >
-            <a
-              target="_blank"
-              title="♬ original sound - Tiddly"
-              href="https://www.tiktok.com/music/original-sound-7379613394041309982?refer=embed"
-              >♬ original sound - Tiddly</a
-            >
-          </section>
-        </blockquote>
+        <div class="text-center">
+          <a
+            target="_blank"
+            href="https://www.tiktok.com/@tiddlytok/video/7379613078150860062"
+          >
+            <img src="assets/help.png" />
+          </a>
+        </div>
       </div>
     </div>
   </div>
