--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark border-bottom bg-dark">
   <div class="container-fluid justify-content-start">
     <a class="navbar-brand">Verity Solver</a>
     <div class="navbar-nav">
